--- a/Pointing Stick C Sharp/Pointing Stick C Sharp.csproj
+++ b/Pointing Stick C Sharp/Pointing Stick C Sharp.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Tinylab-Android-Lollipop-Apps-Evernote.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -78,6 +81,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Untitled-1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Tinylab-Android-Lollipop-Apps-Evernote.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
